Stable version. It can generate JWT